# Physims

./: CMakeLists.txt  README.md
include/core/: body.h  particle.h  world.h
src/: main.cc  particle.cc  world.cc
